# Toolbox_IA_de_Anna

./: .coverage  .dockerignore  Dockerfile  README.md  clean_project.sh  deploy.sh  init_project.py  pyproject.toml
.github/workflows/: ci.yml
Les_Projets/: init_project.py
app/modules/: mon_module.py
app_api/: __init__.py  main.py  moncsv.csv  pyproject.toml  test.db
app_api/maths/: __init__.py
app_api/models/: __init__.py  models.py
app_api/modules/: __init__.py  connect.py
app_front/: Dockerfile  README.md  main.py  pyproject.toml
docs/source/: api.rst  conf.py  contributing.md  index.rst  installation.rst  utilisation.rst
public/: .buildinfo  .buildinfo.bak  api.html  code_of_conduct.html  contributing.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  sphinx-reading-durations.json  utilisation.html
public/.doctrees/: api.doctree  code_of_conduct.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree
public/_modules/: index.html
public/_modules/app/: main.html
public/_modules/app/modules/: mon_module.html
public/_sources/: code_of_conduct.md.txt  index.rst.txt
tests/: conftest.py  test_mon_module.py
